  * Fix eternal warning print bug.
  * Fix warning reset bug with options(warn = 1).
  * Add batch().
  * Fix s2c() newname bug that would drop the client.
  * Fix log restarts on client connect.
  * Add kill().
  * Add rmote support to enhances.
  * Fix device default for rmote base graphic plot.
  * Divert R message (warning, error, stop) to client.

Release 0.3-2 (4/28/2016):
  * Minor internal cleanup.
  * Improve timer behavior.
  * Fix s2c() bug.
  * Fix bug that affected attaching some package namespaces (WCC).
  * Always attach remoter namespace within the server.

Release 0.3-1 (4/17/2016):
  * Add "timer" option to client.
  * Add "middleman" functionality via relay().
  * Add blurb about relays to the vignette.
  * Move password method with masking to getPass package.
  * Integrate getPass() into client authentication.
  * Internals: explicitly namespace pbdZMQ functions.

Release 0.3-0 (2/17/2016):
  * Dump log output to file.
  * Add showlog().
  * Add "q.server" argument to exit() (WCC).
  * Complete refactoring of internals.
  * Better state management/abstraction.
  * Better clarity in client/server REPL's.
  * Significant improvements to error checking in s2c() and c2s().

Release 0.2-1 (2/10/2016):
  * Make encryption/secure servers/sodium optional.
  * Add note about ssh tunneling to vignette.
  * Significantly enhance logger.
  * Fix C-c client bug.

Release 0.2-0 (2/3/2016):
  * Encrypt communications via sodium.
  * Large rewrite of internal state system.
  * Vignette rewrite.
  * Add basic logger for server.
  * Disallow privileged ports.
  * Better documentation and help.

Release 0.1-2 (2/1/2016):
  * Change param "remote_addr" to "addr" in client().
  * Minor improvements to the repl.
  * Better error checking and handling for addresses.

Release 0.1-1 (1/30/2016):
  * Add some remote checks, address validation in client.
  * Changed behavior of exit(); added "client.only" option.
  * Rearrange internals.
  * Add vignette.