@@ -17,6 +17,7 @@ Release 0.4-0 (//):
   * Add rmote support to enhances.
   * Fix device default for rmote base graphic plot.
   * Divert R message (warning, error, stop) to client.
+  * Add wiping out password when server is down.
 
 Release 0.3-2 (4/28/2016):
   * Minor internal cleanup.
